# discord-bot

./: .env.dist  .gitignore  main.py  pyproject.toml  roles.json.dist  utils.py
database/: database.py
database/sql/: 01_initial.sql  02_add_token.sql  03_check_token.sql  04_mark_token_as_used.sql
